Freedom Sanbox Ant Deploy/src/objects/Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>To be grown till maturity and continue saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be grown till maturity but stop saving more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidate (Align to goal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidate (sell)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <label>Agent Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <summarizedField>GoalInsuranceAssociation__c.Allocation__c</summarizedField>
        <summaryForeignKey>GoalInsuranceAssociation__c.Insurance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Premium__c</fullName>
        <label>Annual Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Premium_amount__c</fullName>
        <formula>CASE(  
     Premium_Frequency__c ,
      &apos;Annually&apos;,  Premium_Amount_Rs__c ,
     &apos;Semi Annual&apos;, (Premium_Amount_Rs__c  * 2), 
     &apos;Quarterly&apos;,( Premium_Amount_Rs__c  * 4), 
     &apos;Monthly&apos;,(Premium_Amount_Rs__c   * 12),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual_Premium_amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Premium_In_Rs__c</fullName>
        <formula>IF(
 CONTAINS($RecordType.Name , &apos;Life Insurance&apos;),
  CASE(  Premium_Frequency__c ,&apos;Annually&apos;, Death_Benefit_Rs__c ,
     &apos;Semi Annual&apos;, (Death_Benefit_Rs__c  * 2), 
     &apos;Quarterly&apos;,( Death_Benefit_Rs__c  * 4), 
     &apos;One Time Premium&apos;,(Death_Benefit_Rs__c  * 12),
     &apos;Monthly&apos;,(Death_Benefit_Rs__c  * 12),
     0
  ),
 IF(CONTAINS($RecordType.Name , &apos;General Insurance&apos;), 
  CASE( 
  Premium_Frequency__c ,&apos;Annually&apos;, Sum_Assured_Rs__c ,
     &apos;Semi Annual&apos;, (Sum_Assured_Rs__c  * 2), 
     &apos;Quarterly&apos;,( Sum_Assured_Rs__c * 4), 
     &apos;One Time Premium&apos;,(Sum_Assured_Rs__c * 12),
     &apos;Monthly&apos;,(Sum_Assured_Rs__c  * 12),
     0
   ),0
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Premium (Rs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Premium_Rs__c</fullName>
        <label>Annualized Premium (Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <inlineHelpText>Please Enter Date In Format : DD/MM/YY</inlineHelpText>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Amount__c</fullName>
        <description>This field is used only for binding purpose.When we are displaying current value of insurance,every time we need to calculate current value (As it varies for different time Span).When we need to temporarily store that value we can make use of this field.</description>
        <label>Current Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Rs__c</fullName>
        <label>Death Benefit (Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmergencyFundAction__c</fullName>
        <label>EmergencyFundAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <description>Dont delete this field, Its being used in Approved action plan for internal purpose only</description>
        <label>Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurances</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Data Entry</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <label>From_Portal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Insurance_Type__c</fullName>
        <label>General Insurance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Householder&apos;s Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theft Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Type__c</fullName>
        <label>Life Insurance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Term Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children Policy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Maturity_Amount__c</fullName>
        <description>It will contain matury amount of Insurance</description>
        <label>Maturity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Benefit__c</fullName>
        <label>Maximum Benefit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Benefit__c</fullName>
        <label>Monthly Benefit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Premium_Due_Date__c</fullName>
        <description>Next Premium Due Date</description>
        <label>Next Premium Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nominee__c</fullName>
        <label>Nominee</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Premium_Left__c</fullName>
        <label>Number of Premium Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Premiums_Left__c</fullName>
        <label>Number of Premiums Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Years_Left__c</fullName>
        <label>Number of Years Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_of_Income__c</fullName>
        <label>Percent of Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Issued_Date__c</fullName>
        <label>Policy Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number_or_Name__c</fullName>
        <label>Policy Number or Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Status__c</fullName>
        <label>Policy Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Term__c</fullName>
        <label>Policy Term(in Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Term_in_Years__c</fullName>
        <label>Policy Term(in Years)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Term Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP - Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Householder&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarnteed Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP - Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Amount_Rs__c</fullName>
        <label>Premium Amount (Rs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_Due_date__c</fullName>
        <label>Premium Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_End_Date__c</fullName>
        <label>Premium End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Frequency__c</fullName>
        <label>Premium Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Paying_Term__c</fullName>
        <description>Added new field.This is because many times the Premium Paying term is less than the Tenure</description>
        <label>Premium Paying Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Payment_Frequency__c</fullName>
        <label>Premium Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Payor__c</fullName>
        <label>Premium Payor</label>
        <picklist>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Beneficiary</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurances (Primary Beneficiary)</relationshipLabel>
        <relationshipName>Insurances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Premium__c</fullName>
        <label>Received Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RemoveCheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RemoveCheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residual_Benefits__c</fullName>
        <label>Residual Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Residual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Return_Of_Interest__c</fullName>
        <description>FP Changes - II</description>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revised_Maturity_Amount__c</fullName>
        <label>Revised Maturity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secondary_Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Beneficiary</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Insurances (ContactSecondary Beneficiary)</relationshipLabel>
        <relationshipName>Insurances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Cover_General_Insurance__c</fullName>
        <label>Suggested Cover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_Assured_Rs__c</fullName>
        <label>Sum Assured (Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surrender_Cash_Value__c</fullName>
        <label>Surrender/ Cash Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surrender_Value__c</fullName>
        <label>Surrender Value (Current Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tenure_of_Insurance__c</fullName>
        <label>Tenure of Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isIncludeActionPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Action Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>totalAsset__c</fullName>
        <formula>CASE(
 Policy_Type__c ,
&apos;Whole Life&apos;,  Annual_Premium_amount__c *  (1.06 ^ Tenure_of_Insurance__c ),
&apos;ULIP - Debt&apos;, Annual_Premium_amount__c *  (1.06 ^ Tenure_of_Insurance__c ),
&apos;Money-Back&apos;,Annual_Premium_amount__c * (1.05 ^ Tenure_of_Insurance__c ),
&apos;Endowment&apos;,Annual_Premium_amount__c *  (1.06 ^ Tenure_of_Insurance__c ),
&apos;ULIP - Equity&apos;,Annual_Premium_amount__c * (1.10 ^ Tenure_of_Insurance__c ),
&apos;Pension plan&apos;,Annual_Premium_amount__c * (1.06 ^ Tenure_of_Insurance__c ),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>totalAsset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_insurance__c</fullName>
        <formula>IF(
CONTAINS(RecordTypeId , &apos;01220000000Do0u&apos; ) , Sum_Assured_Rs__c,
IF(CONTAINS(RecordTypeId , &apos;01220000000Do0v&apos; ), Death_Benefit_Rs__c,
0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>total insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Insurance</label>
    <nameField>
        <displayFormat>INS-{00000}</displayFormat>
        <label>Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <recordTypes>
        <fullName>General_Insurance</fullName>
        <active>true</active>
        <label>General Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Life_Insurance</fullName>
        <active>true</active>
        <label>Life Insurance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>